@@ -1,3 +1,13 @@
+unreleased
+
+* Enhancements
+
+  * Allow choosing domain (API endpoint)
+
+* Bug fixes
+
+  * Actually send keys set with Carbon.key
+
 2.2.1 / 2012-03-21
 
 * Enhancements
